Update YouTube video thumbnail image source

--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
         const marker = "YOUTUBE_CODE_" + youtubeCounter;
         const snippet = `<div id="cos" name="cos" style="padding:0;position:relative;background:url(http://img.youtube.com/vi/${youtubeCode}/0.jpg) no-repeat center;background-size:cover;width:540px;height:280px">
           <div style="background-color:#000078;height:280px;opacity:.6">
-            <a href="http://www.youtube.com/watch?v=${youtubeCode}" target="_blank"><img id="imatge_video" name="imatge_video" src="http://cv.uoc.edu/estudiant/_resources/img/novetats/butlleti/ico-video-blanco-thumb.png" border="0" style="margin-top:110px;margin-left:235px" /></a>
+            <a href="http://www.youtube.com/watch?v=${youtubeCode}" target="_blank"><img id="imatge_video" name="imatge_video" src="https://campus.uoc.edu/estudiant/_resources/img/novetats/butlleti/ico-video-blanco-thumb.png" border="0" style="margin-top:110px;margin-left:235px" /></a>
           </div>
         </div>
         <iframe width="540" height="280" frameborder="0" title="Video" id="video-principal" name="video-principal" src="https://www.youtube.com/embed/${youtubeCode}" allowfullscreen style="display:none"></iframe>`;
